--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -141,6 +141,9 @@
             </div>
           </div>
         </section>
+        <div class="section">
+            <p>Projects Completed</p>
+        </div>
     </main>
     <footer class="footer">
       <div class="container">
