--- a/accessibility/fix-a11y/10-index.html
+++ b/accessibility/fix-a11y/10-index.html
@@ -13,7 +13,7 @@
           <nav class="nav">
             <ul>
               <li><a href="#">Home</a></li>
-              <li></li><a href="#">About</a></li>
+              <li><a href="#">About</a></li>
               <li><a href="#">Services</a></li>
               <li><a href="#">Portfolio</a></li>
               <li><a href="#">Pricing</a></li>
